--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -41,7 +41,7 @@
     <item row="0" column="1">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>3</number>
       </property>
       <widget class="QWidget" name="search">
        <property name="sizePolicy">
@@ -60,7 +60,7 @@
         <item row="6" column="1" colspan="4">
          <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="3">
           <item>
-           <layout class="QVBoxLayout" name="verticalLayout_3" stretch="">
+           <layout class="QVBoxLayout" name="verticalLayout_3">
             <property name="spacing">
              <number>0</number>
             </property>
